fix(example): select layout shift

--- a/example/app/globals.css
+++ b/example/app/globals.css
@@ -112,6 +112,6 @@
   }
   
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground !min-w-full;
   }
 }
